WOOOOOO BETTER CSS

--- a/Website Homework/bib.html
+++ b/Website Homework/bib.html
@@ -11,7 +11,7 @@
 	<div class="homebar">
 		<a class="hometext" href="home.html">HOME</a>
 	</div>
-	<p>
+	<p id="introduction">
 		Hi there! My name is Ivy Olson, and I am the curator of this website. Although this will never see the light of day, I hope that those who see it enjoy the content that I have curated! Not only the content about myself, but the stories and art which I have written/found. All material that is not mine will be credited either under or in the "Bibliography" page.
 	</p>
 	<br>
