--- a/Website Homework/contact.html
+++ b/Website Homework/contact.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="main">
@@ -11,7 +13,7 @@
 	<div class="homebar">
 		<a href="home.html">Home</a>
 	</div>
-	<p>
+	<p id="introduction">
 		Hi there! My name is Ivy Olson, and I am the curator of this website. Although this will never see the light of day, I hope that those who see it enjoy the content that I have curated! Not only the content about myself, but the stories and art which I have written/found. All material that is not mine will be credited either under or in the "Bibliography" page.
 	</p>
 	<div class="button_menu">
@@ -33,7 +35,7 @@
 			<input type="radio" name="consent" value="yes">Yes<br>
 			<input type="radio" name="consent" value="no">No<br>
 
-            <button id="mySubmit" type="submit">Submit</button>
+            <button id="mySubmit" type="submit" class="btn btn-info">Submit</button>
         </form>
 	</div>
 
