--- a/Website Homework/stories.html
+++ b/Website Homework/stories.html
@@ -1,6 +1,31 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style.css">
+	<style>
+		.stories_down{
+			background-color: #c09bc7;
+			color: black;
+		}
+		.pdf_button{
+			background-color: purple;
+			color: white;
+			text-decoration: none;
+			padding: 5px;
+			border-radius: 5px;
+		}
+		body{
+			background-image: url("img/back.jpg");
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+		}
+		.quote{
+			background-color: beige;
+			padding: 5px;
+			border-radius: 5px;
+			font-family: var(--f1);
+		}
+	</style>
 </head>
 <body>
 <div class="main">
@@ -11,7 +36,7 @@
 	<div class="homebar">
 		<a class="hometext" href="home.html">HOME</a>
 	</div>
-	<p>
+	<p id="introduction">
 		Hi there! My name is Ivy Olson, and I am the curator of this website. Although this will never see the light of day, I hope that those who see it enjoy the content that I have curated! Not only the content about myself, but the stories and art which I have written/found. All material that is not mine will be credited either under or in the "Bibliography" page.
 	</p>
 	<div class="button_menu">
