--- a/Website Homework/home.html
+++ b/Website Homework/home.html
@@ -8,10 +8,10 @@
 		<img src="img/cover.jpg" alt="Italian Trulli" class="header_img">
 		<h1 class="header_text"> Ivy Olson's Website </h1>
 	</div>
-	<div class="homebar">
-		<a class="hometext" href="home.html">HOME</a>
+	<div class="homebar" style="background-color: #c09bc7;">
+		<a class="hometext" href="home.html" style="">HOME</a>
 	</div>
-	<p>
+	<p id="introduction">
 		Hi there! My name is Ivy Olson, and I am the curator of this website. Although this will never see the light of day, I hope that those who see it enjoy the content that I have curated! Not only the content about myself, but the stories and art which I have written/found. All material that is not mine will be credited either under or in the "Bibliography" page.
 	</p>
 	<div class="button_menu">
@@ -44,9 +44,9 @@
 			Finally, let me list for you some of my favorite websites, design wise!
 		</p>
 		<ul>
-			<li><a href="https://www.worldanvil.com/w/spira-sparkedpersephone/a/introduction-to-spira-article">Spira: World of Wonder</a></li>
-			<li><a href="https://revolutionarygamesstudio.com/">Thrive: A game of evolution!</a></li>
-			<li><a href="https://www.worldanvil.com/w/cathedris-stormbril"> Cathedris: An example of proper image usage </a></li>
+			<li><a href="https://www.worldanvil.com/w/spira-sparkedpersephone/a/introduction-to-spira-article" id="Link">Spira: World of Wonder</a></li>
+			<li><a href="https://revolutionarygamesstudio.com/"id="Link">Thrive: A game of evolution!</a></li>
+			<li><a href="https://www.worldanvil.com/w/cathedris-stormbril"id="Link"> Cathedris: An example of proper image usage </a></li>
 		</ul>
 		<p>
 			I may or may not have included a website of my own in there, but I will not incriminate! (It's Spira, go read my works please!) I hope you enjoy this website in the meantime!
