--- a/Website Homework/home.html
+++ b/Website Homework/home.html
@@ -1,6 +1,11 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/style.css">
+	<script>
+		window.alert("Hi! This alert is to show whoever sees this website that I did, In Fact, use javascript!");
+
+
+	</script>
 </head>
 <body>
 <div class="main">
